Added links on footer for testing

--- a/src/partials/footer.html
+++ b/src/partials/footer.html
@@ -101,7 +101,7 @@
         <!-- List -->
         <ul class="list-unstyled text-muted mb-0">
           <li class="mb-3">
-            <a href="#!" class="text-reset">
+            <a href="minutes-privacy-policy.html" class="text-reset">
               Privacy Policy
             </a>
           </li>
