--- a/src/partials/footer.html
+++ b/src/partials/footer.html
@@ -12,9 +12,9 @@
         </p>
 
         <!-- Social -->
-        <ul class="list-unstyled list-inline list-social mb-6 mb-md-0">
+        <ul class="list-unstyled list-inline list-social mb-6 mb-md-0 text-center">
           <li class="list-inline-item list-social-item mr-3">
-            <a href="#!" class="text-decoration-none">
+            <a href="#https://www.instagram.com/dynamiteapps/" class="text-decoration-none">
               <img src="@@webRoot/assets/img/icons/social/instagram.svg" class="list-social-icon" alt="...">
             </a>
           </li>
@@ -24,7 +24,7 @@
             </a>
           </li>
           <li class="list-inline-item list-social-item mr-3">
-            <a href="#!" class="text-decoration-none">
+            <a href="https://twitter.com/dynamiteappsio" class="text-decoration-none">
               <img src="@@webRoot/assets/img/icons/social/twitter.svg" class="list-social-icon" alt="...">
             </a>
           </li>
