--- a/src/partials/navbar.html
+++ b/src/partials/navbar.html
@@ -25,6 +25,11 @@
       <ul class="navbar-nav ml-auto">
         <li class="nav-item">
           <a class="nav-link" href="#" id="navbarLandings" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
+            Features
+          </a>
+        </li>
+        <li class="nav-item">
+          <a class="nav-link" href="#" id="navbarLandings" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
             Pricing
           </a>
         </li>
