--- a/src/assets/scss/_user-variables.scss
+++ b/src/assets/scss/_user-variables.scss
@@ -1,4 +1,4 @@
-// 
+//
 // user-variables.scss
 // Use this to overwrite Bootstrap and Landkit variables
 //
@@ -6,3 +6,5 @@
 // Example of a variable override to change Landkit's background color
 // Remove the "//" to comment it in and see it in action!
 // $font-family-base: -apple-system, BlinkMacSystemFont, "Segoe UI", "Roboto", "Helvetica Neue", Arial, sans-serif;
+
+//--primary: #007bff;
