--- a/src/partials/footer.html
+++ b/src/partials/footer.html
@@ -46,7 +46,7 @@
         <!-- List -->
         <ul class="list-unstyled text-muted mb-6 mb-md-8 mb-lg-0">
           <li class="mb-3">
-            <a href="#!" class="text-reset">
+            <a href="https://apps.apple.com/us/app/minutes/id1483067743?ls=1" class="text-reset">
               <img src="@@webRoot/assets/img/Download_on_the_App_Store_Badge_US-UK_RGB_blk_092917_web.svg">
             </a>
           </li>
