Added product hunt to the site Added links in the footer

--- a/src/partials/footer.html
+++ b/src/partials/footer.html
@@ -50,6 +50,11 @@
               <img src="@@webRoot/assets/img/Download_on_the_App_Store_Badge_US-UK_RGB_blk_092917_web.svg">
             </a>
           </li>
+          <!-- <li class="mb-3">
+          <a href="https://www.producthunt.com/posts/minutes-app?utm_source=badge-featured&utm_medium=badge&utm_souce=badge-minutes-app" target="_blank"><img src="https://api.producthunt.com/widgets/embed-image/v1/featured.svg?post_id=178260&theme=light" alt="Minutes App - Take back control of your meetings with Minutes App | Product Hunt Embed" style="width: 150px; height: 54px;" width="150px" height="54px" /></a>
+          </li> -->
+
+
         </ul>
 
       </div>
@@ -62,23 +67,23 @@
 
         <!-- List -->
         <ul class="list-unstyled text-muted mb-6 mb-md-8 mb-lg-0">
-          <li class="mb-3">
+          <!-- <li class="mb-3">
             <a href="#!" class="text-reset">
               Medium
             </a>
-          </li>
+          </li> -->
           <li class="mb-3">
-            <a href="#!" class="text-reset">
-              Indie Hackers
+            <a href="https://www.sideprojectors.com/project/14189/minutes-app" class="text-reset">
+              Side Projectors
             </a>
           </li>
           <li class="mb-3">
-            <a href="#!" class="text-reset">
+            <a href="https://www.producthunt.com/posts/minutes-app?utm_source=badge-featured&utm_medium=badge&utm_souce=badge-minutes-app" class="text-reset">
               Product Hunt
             </a>
           </li>
           <li class="mb-3">
-            <a href="#!" class="text-reset">
+            <a href="https://sideprojects.net/posts/vAgvRjNFgEhDcHEoF/take-back-control-of-your-meetings-with-minutes-app" class="text-reset">
               Side Projects
             </a>
           </li>
