Added Indie hackers link

--- a/src/partials/footer.html
+++ b/src/partials/footer.html
@@ -67,11 +67,11 @@
 
         <!-- List -->
         <ul class="list-unstyled text-muted mb-6 mb-md-8 mb-lg-0">
-          <!-- <li class="mb-3">
-            <a href="#!" class="text-reset">
-              Medium
+          <li class="mb-3">
+            <a href="https://www.indiehackers.com/product/minutes-app" class="text-reset">
+              Indie Hackers
             </a>
-          </li> -->
+          </li>
           <li class="mb-3">
             <a href="https://www.sideprojectors.com/project/14189/minutes-app" class="text-reset">
               Side Projectors
