Added new Terms of Use to the website

--- a/src/partials/footer.html
+++ b/src/partials/footer.html
@@ -110,6 +110,11 @@
               Privacy Policy
             </a>
           </li>
+          <li class="mb-3">
+            <a href="minutes-terms-of-service.html" class="text-reset">
+              Terms of Usage
+            </a>
+          </li>
         </ul>
       </div>
 
