Added Smart Banner

--- a/src/partials/head.html
+++ b/src/partials/head.html
@@ -27,6 +27,7 @@
 <meta name="msapplication-TileColor" content="#ffffff">
 <meta name="msapplication-TileImage" content="/ms-icon-144x144.png">
 <meta name="theme-color" content="#ffffff">
+<meta name="apple-itunes-app" content="app-id=1483067743">
 
 <!-- Map -->
 <link href='https://api.mapbox.com/mapbox-gl-js/v0.53.0/mapbox-gl.css' rel='stylesheet' />
