--- a/src/partials/head.html
+++ b/src/partials/head.html
@@ -36,6 +36,16 @@
 <!-- build:css @@webRoot/assets/css/theme.min.css -->
 <link rel="stylesheet" href="@@webRoot/assets/css/theme.css">
 <!-- endbuild -->
+<!-- Global site tag (gtag.js) - Google Analytics -->
+<script async src="https://www.googletagmanager.com/gtag/js?id=UA-156196757-1"></script>
+<script>
+  window.dataLayer = window.dataLayer || [];
+  function gtag(){dataLayer.push(arguments);}
+  gtag('js', new Date());
+
+  gtag('config', 'UA-156196757-1');
+</script>
+
 
 <!-- <title>@@pageTitle</title> -->
 <title>Minutes App</title>
