--- a/src/partials/footer.html
+++ b/src/partials/footer.html
@@ -8,7 +8,7 @@
 
         <!-- Text -->
         <p class="text-gray-700 mb-2">
-          Take back control over your meetings
+          Minutes, Take back control over your meetings
         </p>
 
         <!-- Social -->
