--- a/src/partials/navbar.html
+++ b/src/partials/navbar.html
@@ -1,4 +1,4 @@
-<nav class="navbar navbar-expand-lg @@classList">
+<nav class="navbar navbar-expand-lg fixed-top @@classList">
   @@if(type=="boxed"){<div class="container">}
 
     <!-- Brand -->
@@ -6,7 +6,7 @@
     <a class="navbar-brand" href="@@webRoot/index.html">
       <img src="@@webRoot/assets/img/minutes/minutes-launch.png" class="navbar-brand-img" alt="Minutes App by Dynamite Apps LLC">
     </a>
-    MINUTES APP</p>
+    MINUTES</p>
 
     <!-- Toggler -->
     <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarCollapse" aria-controls="navbarCollapse" aria-expanded="false" aria-label="Toggle navigation">
@@ -24,12 +24,12 @@
       <!-- Navigation -->
       <ul class="navbar-nav ml-auto">
         <li class="nav-item">
-          <a class="nav-link" href="#" id="navbarLandings" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
+          <a class="nav-link" href="#FEATURES" id="navbarLandings" aria-haspopup="true" aria-expanded="false">
             Features
           </a>
         </li>
         <li class="nav-item">
-          <a class="nav-link" href="#" id="navbarLandings" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
+          <a class="nav-link" href="#PRICING" id="navbarLandings" aria-haspopup="true" aria-expanded="false">
             Pricing
           </a>
         </li>
